Add roles for users